--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats-service-srv
+    build: stats-service-srv/server
     image: stats-service-image
     container_name: explore-with-me-stats
     depends_on:
